# mono

./: .gitignore  .ruff.toml  .tool-versions  README.md  SETUP.md  justfile  mise.toml  pyproject.toml
config/: ls_applications_moia
config/.config/Code/: Network Persistent State  TransportSecurity  machineid
config/.config/Code/Backups/99f95a1b0221b3a55a5428b3109dfbd2/file/: 44a65550
config/.config/Code/Cache/Cache_Data/: 15651df7a7ad0fa5_0  5283edf90cf4ab50_0  967f4d9a3e9d5085_0  99dafce8a9783fa5_0  9aee2c734560bfbf_0  d121e2a6335b7510_0
config/.config/Code/Cache/Cache_Data/index-dir/: the-real-index
config/.config/Code/CachedProfilesData/__default__profile__/: extensions.builtin.cache  extensions.user.cache
config/.config/Code/Code Cache/js/index-dir/: the-real-index
config/.config/Code/Crashpad/: client_id
config/.config/Code/Crashpad/completed/: 8aac6ca8-1e3e-44fe-8c68-293ed8666e75.dmp  c830e7cc-71bd-4be7-bd8b-11d64524bdcd.dmp
config/.config/Code/DawnGraphiteCache/: data_1  index
config/.config/Code/DawnWebGPUCache/: data_1  index
config/.config/Code/GPUCache/: data_1  index
config/.config/Code/Service Worker/ScriptCache/: 2a0afd649b00527b_0  2a0afd649b00527b_1  2cc80dabc69f58b6_1  f1cdccba37924bda_1
config/.config/Code/Service Worker/ScriptCache/index-dir/: the-real-index
config/.config/Code/Session Storage/: LOG  LOG.old
config/.config/Code/Shared Dictionary/cache/index-dir/: the-real-index
config/.config/Code/User/History/-257b7484/: UFn4.md  dnXC.md  entries.json  lXXf.md
config/.config/Code/User/History/-28922df3/: 4Hf1  entries.json  jRMx  n0j9  ogNr  ovfa
config/.config/Code/User/History/-52cfbfe4/: entries.json  fYI8
config/.config/Code/User/History/-635a6774/: Md9X  T8mX  entries.json
config/.config/Code/User/History/18dc7ac0/: DEy5.pre-oh-my-zsh  entries.json
config/.config/Code/User/History/1f4c0636/: 04Pv  2HVP  2UKj  3rsB  DTax  EDts  Fyxn  G4bd  Iw1W  LOmH  PNg8  RjZv  TLo4  Tk8W  VQ11  YZEs  eQAJ  entries.json  lLWE  njdN  q7cu  uTqT  wyEa  ycXq
config/.config/Code/User/History/223e5244/: GkDP.json  Zn3b.json  eYi8.json  entries.json  nnIX.json  vY0O.json
config/.config/Code/User/History/7519bf58/: GpUE  (+7 more)
config/.config/Code/User/globalStorage/: state.vscdb  state.vscdb.backup  storage.json
config/.config/Code/WebStorage/: QuotaManager
config/.config/regolith3/: Xresources
config/git/: .gitconfig  .gitconfig_moia
config/i3/: i3_config_dual  i3_config_single  i3status_config
config/keyboard/: set_keyboard.sh
config/macos/: README.md
config/monitors/: set_monitors_dual.sh  set_monitors_singleVM.sh
config/regolith3/i3/: config
config/regolith3/i3/_config.d/: .20_ilia.swp
config/setup/: CHANGELOG.md  tools.txt
config/shell/: .bashrc  .zshrc  .zshrc_savedir
config/vscode/: README.md  keybindings.json  settings.json  vscode_keybindings.json  vscode_keybindings_linux_DE.json  vscode_settings.json
dev/filesyncer/: README.md  cp_intersection_with_source_newer_to_target.sh  cp_intersection_with_target_newer_to_source.sh  cp_source_only_to_target.sh  cp_target_only_to_source.sh  log.sh  pyproject.toml  rm_target_only_in_target.sh  scan.py
dev/filesyncer/in/: .syncignore  source_folder.txt  target_folder.txt
dev/filesyncer/output/: intersection.json  left_only.json  right_only.json  test_index.json  test_index_1.json  test_index_2.json  union.json
dev/filesyncer/src/filesyncer/: indices.py  operations.py
dev/fitness/: pyproject.toml
dev/llm-summary/: pyproject.toml
dev/llm-summary/notebooks/: prompting.py
dev/playground/: mo_test.py  pyproject.toml
dev/playground/src/playground/: bar.py
dev/pyrust/: pyproject.toml
dev/pyrust/rust/: Cargo.toml
dev/template/: pyproject.toml
finances/: Makefile  README.md  justfile  pyproject.toml
finances/src/finances/: crypto.sh  evaluate_expenses.py  fill_current_amounts.py  graphs.py  grocery_cost.py  monthly_io.py  parse_depot.py  prompt_current_amounts.py  prompt_values.py  set_giro_target.py
fitness/: pyproject.toml
fitness/input/: workouts.csv
fitness/notebooks/: awesome_notebook.py
fitness/src/fitness/: foo.py
fitnessss/: pyproject.toml
llm-chat/: justfile  pyproject.toml
llm-chat/data/notes/bias-variance-tradeoff/: context.md
llm-chat/data/notes/big-o-notation/: context.md
llm-chat/data/notes/boosting/: context.md
llm-chat/data/notes/cross-validation/: context.md
llm-chat/data/notes/file-formats/: context.md
llm-chat/data/notes/generalized-linear-model/: context.md
llm-chat/data/notes/goodharts-law/: context.md
llm-chat/data/notes/k-means-clustering/: context.md
llm-chat/data/notes/k-nearest-neighbour/: context.md
llm-chat/data/notes/linear-regression/: context.md
llm-chat/data/notes/logistic-regression/: context.md
llm-chat/data/notes/p-value/: context.md
llm-chat/data/notes/paradox/: context.md
llm-chat/data/notes/principal-component-analysis/: context.md
llm-chat/data/notes/programming-paradigms/: context.md
llm-chat/data/notes/thinking-clearly-about-causality-and-correlation/: context.md
llm-chat/data/vector-store/: cars.md  central-limit-theorem.md  dot-products-python.md  frodo.md  gandalf.md  poem.md  sql-select.md  variance-of-sum.md  woods.md
llm-chat/notebooks/: prompting.py
llm-chat/src/llm_chat/: chat.py  models.py  util.py
playground/: justfile  pyproject.toml
playground/notebooks/: anomaly_detection.py  awesome_notebook.py  digit_classification.py  docling.py  marimo_test.py
template/input/: stuff.toml
template/src/template/: foo.py
(+45 files in other folders)
