[tool.poetry]
name = "finances"
version = "0.1.0"
description = ""
authors = ["Steffen Muehle <steffen.muehle@moia.io>"]

[tool.poetry.dependencies]
python = "^3.10"
seaborn = "^0.12.2"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
jupyter = "^1.0.0"
nbconvert = "^7.10.0"
toml = "^0.10.2"
graphviz = "^0.20.3"
plotly = "^5.24.1"
kaleido = "0.2.1"
jupytext = "^1.16.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
