[project]
name = "finances"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "graphviz>=0.20.3",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "toml>=0.10.2",
    "types-toml>=0.10.8.20240310",
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.2.3",
    "jupytext>=1.16.7",
    "mypy>=1.15.0",
    "notebook>=7.3.3",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finances"]
