[tool.poetry]
name = "fitness"
version = "0.1.0"
description = ""
authors = ["Steffen Muehle <steffen.muehle@moia.io>"]
readme = "README.md"
packages = [{include = "fitness", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
