[tool.poetry]
name = "fitness"
version = "0.1.0"
description = ""
authors = ["Steffen Muehle <steffen.muehle@moia.io>"]
readme = "README.md"
packages = [{include = "fitness", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.6.9"
mypy = "^1.11.2"
toml = "^0.10.2"
jupytext = "^1.16.4"
pandas = "^2.2.3"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
