[project]
name = "fitness"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "plotly>=5.24.1",
    "pandas>=2.2.3",
    "ipywidgets>=8.1.5",
    "voila>=0.5.7",
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.2.3",
    "jupytext>=1.16.7",
    "mypy>=1.15.0",
    "notebook>=7.3.3",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fitness"]
