[project]
name = "llm-chat"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.60.0",
    "tiktoken>=0.9.0",
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.2.3",
    "jupytext>=1.16.7",
    "mypy>=1.15.0",
    "notebook>=7.3.3",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_chat"]
