[project]
name = "playground"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.49.0",
    "marimo>=0.9.27",
    "matplotlib>=3.10.6",
    "pandas>=2.3.0",
    "polars>=1.32.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.2.3",
    "jupytext>=1.16.7",
    "mypy>=1.15.0",
    "notebook>=7.3.3",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/playground"]
