[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["Steffen Muehle <steffen.muehle@moia.io>"]
readme = "README.md"
packages = [{include = "template", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.6.9"
mypy = "^1.11.2"
toml = "^0.10.2"
marimo = "^0.9.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
