[tool.poetry]
name = "pyrust"
version = "0.1.0"
description = ""
authors = ["steffen <steffen_muehle@gmx.de>"]
readme = "README.md"
packages = [{include = "pyrust", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
